--- a/Sprint 2 Ingenieria de Datos/ETL_google/ETL_Pennsylvania.ipynb
+++ b/Sprint 2 Ingenieria de Datos/ETL_google/ETL_Pennsylvania.ipynb
@@ -1,33 +1,435 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-<<<<<<< HEAD
    "source": [
-    "#"
+    "## ETL California"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Importacion de librerías\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import datetime\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# remueve los warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
-=======
->>>>>>> 55b52c3ddd6171f7d15ff76006438995338904a2
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e:\\HENRY\\Proyecto Final\\PO_2\\Proyecto-Grupal-Google-yelp\\Sprint 2 Ingenieria de Datos\\ETL_google\\pennsylvania_data\n",
+      "finalizo cargan de datos\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cambiar el directorio de trabajo al directorio donde se encuentran los archivos JSON\n",
+    "%cd .\\pennsylvania_data\n",
+    "\n",
+    "# Obtener una lista de archivos en el directorio actual\n",
+    "archivos = os.listdir()\n",
+    "\n",
+    "# Crear un DataFrame vacío para almacenar los datos\n",
+    "df_pennsylvania = pd.DataFrame()\n",
+    "\n",
+    "# Iterar sobre cada archivo en la lista de archivos\n",
+    "for archivo in archivos:\n",
+    "    # Verificar si el archivo tiene la extensión .json\n",
+    "    if archivo.endswith('.json'):\n",
+    "        # Leer el archivo JSON y cargarlo en un DataFrame\n",
+    "        data = pd.read_json(archivo, lines=True)\n",
+    "        # Concatenar los datos del archivo al DataFrame principal\n",
+    "        df_pennsylvania = pd.concat([df_pennsylvania, data], axis=0)\n",
+    "print(\"finalizo cargan de datos\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>time</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>text</th>\n",
+       "      <th>gmap_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.049447e+20</td>\n",
+       "      <td>Jaron Whitfield</td>\n",
+       "      <td>1517731762839</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Joe is quite unique of his line of work, he as...</td>\n",
+       "      <td>0x89c6c63c8cd87141:0x54d0d283872eecbb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.176097e+20</td>\n",
+       "      <td>Jonathan McCarthy</td>\n",
+       "      <td>1476276291163</td>\n",
+       "      <td>5</td>\n",
+       "      <td>For such a small place their impact on my life...</td>\n",
+       "      <td>0x89c6c63c8cd87141:0x54d0d283872eecbb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.105632e+20</td>\n",
+       "      <td>Rocky Kev</td>\n",
+       "      <td>1338826945578</td>\n",
+       "      <td>5</td>\n",
+       "      <td>I usually give them a call before I stop by to...</td>\n",
+       "      <td>0x89c6c63c8cd87141:0x54d0d283872eecbb</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        user_id               name           time  rating   \n",
+       "0  1.049447e+20    Jaron Whitfield  1517731762839       5  \\\n",
+       "1  1.176097e+20  Jonathan McCarthy  1476276291163       5   \n",
+       "2  1.105632e+20          Rocky Kev  1338826945578       5   \n",
+       "\n",
+       "                                                text   \n",
+       "0  Joe is quite unique of his line of work, he as...  \\\n",
+       "1  For such a small place their impact on my life...   \n",
+       "2  I usually give them a call before I stop by to...   \n",
+       "\n",
+       "                                 gmap_id  \n",
+       "0  0x89c6c63c8cd87141:0x54d0d283872eecbb  \n",
+       "1  0x89c6c63c8cd87141:0x54d0d283872eecbb  \n",
+       "2  0x89c6c63c8cd87141:0x54d0d283872eecbb  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Visualizamos el dataframe \n",
+    "df_pennsylvania.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2400000, 8)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Tamaño del dataframe\n",
+    "df_pennsylvania.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 2400000 entries, 0 to 149999\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column            Dtype  \n",
+      "---  ------            -----  \n",
+      " 0   user_id           float64\n",
+      " 1   name              object \n",
+      " 2   rating            int64  \n",
+      " 3   text              object \n",
+      " 4   gmap_id           object \n",
+      " 5   time_normalizado  object \n",
+      "dtypes: float64(1), int64(1), object(4)\n",
+      "memory usage: 128.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Visualizar información\n",
+    "df_pennsylvania.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Eliminar Columna Pics y Resp\n",
+    "df_pennsylvania=df_pennsylvania.drop(['pics','resp'],axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalizamos la columna time creando la columna time_normalizado con la fecha en el formato %d/%m/%y %H:%M:%S \n",
+    "times = [] \n",
+    "for data in df_pennsylvania['time']/1000 :\n",
+    "    times.append(datetime.datetime.utcfromtimestamp(data).strftime('%d/%m/%y %H:%M:%S'))\n",
+    "df_pennsylvania['time_normalizado']=times\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminamos time y verificamos la creacion de la nueva columna\n",
+    "df_pennsylvania=df_pennsylvania.drop(['time',],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>text</th>\n",
+       "      <th>gmap_id</th>\n",
+       "      <th>time_normalizado</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.049447e+20</td>\n",
+       "      <td>Jaron Whitfield</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Joe is quite unique of his line of work, he as...</td>\n",
+       "      <td>0x89c6c63c8cd87141:0x54d0d283872eecbb</td>\n",
+       "      <td>04/02/18 08:09:22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.176097e+20</td>\n",
+       "      <td>Jonathan McCarthy</td>\n",
+       "      <td>5</td>\n",
+       "      <td>For such a small place their impact on my life...</td>\n",
+       "      <td>0x89c6c63c8cd87141:0x54d0d283872eecbb</td>\n",
+       "      <td>12/10/16 12:44:51</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        user_id               name  rating   \n",
+       "0  1.049447e+20    Jaron Whitfield       5  \\\n",
+       "1  1.176097e+20  Jonathan McCarthy       5   \n",
+       "\n",
+       "                                                text   \n",
+       "0  Joe is quite unique of his line of work, he as...  \\\n",
+       "1  For such a small place their impact on my life...   \n",
+       "\n",
+       "                                 gmap_id   time_normalizado  \n",
+       "0  0x89c6c63c8cd87141:0x54d0d283872eecbb  04/02/18 08:09:22  \n",
+       "1  0x89c6c63c8cd87141:0x54d0d283872eecbb  12/10/16 12:44:51  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Visualizamos el dataframe \n",
+    "df_pennsylvania.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user_id                   0\n",
+       "name                      0\n",
+       "rating                    0\n",
+       "text                1041386\n",
+       "gmap_id                   0\n",
+       "time_normalizado          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Valores Nulos\n",
+    "df_pennsylvania.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33568"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_pennsylvania.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # eliminar filas que tienen valores nulos\n",
+    "df_pennsylvania.dropna(inplace=True)   \n",
+    "\n",
+    "# eliminar filas duplicadas\n",
+    "df_pennsylvania.drop_duplicates(inplace=True)\n",
+    "\n",
+    "# Restablecer el índice\n",
+    "df_pennsylvania.reset_index(drop=True,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1328047, 6)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Comprobar el tamaño del dataframe\n",
+    "df_pennsylvania.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Guardar el DF\n",
+    "#df_pennsylvania.to_csv('',index=False)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
