--- a/Sprint 2 Ingenieria de Datos/ETL_google/ETL_Pennsylvania.ipynb
+++ b/Sprint 2 Ingenieria de Datos/ETL_google/ETL_Pennsylvania.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,14 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "e:\\HENRY\\Proyecto Final\\PO_2\\Proyecto-Grupal-Google-yelp\\Sprint 2 Ingenieria de Datos\\ETL_google\\pennsylvania_data\n",
+      "[WinError 2] El sistema no puede encontrar el archivo especificado: '.\\\\pennsylvania_data'\n",
+      "e:\\HENRY\\Proyecto Final\\PO_2\\Proyecto-Grupal-Google-yelp\\Sprint 2 Ingenieria de Datos\\ETL_google\\pennsylvania_data\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "finalizo cargan de datos\n"
      ]
     }
@@ -62,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -91,6 +98,8 @@
        "      <th>time</th>\n",
        "      <th>rating</th>\n",
        "      <th>text</th>\n",
+       "      <th>pics</th>\n",
+       "      <th>resp</th>\n",
        "      <th>gmap_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -102,6 +111,8 @@
        "      <td>1517731762839</td>\n",
        "      <td>5</td>\n",
        "      <td>Joe is quite unique of his line of work, he as...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "      <td>0x89c6c63c8cd87141:0x54d0d283872eecbb</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -111,6 +122,8 @@
        "      <td>1476276291163</td>\n",
        "      <td>5</td>\n",
        "      <td>For such a small place their impact on my life...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "      <td>0x89c6c63c8cd87141:0x54d0d283872eecbb</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -120,6 +133,8 @@
        "      <td>1338826945578</td>\n",
        "      <td>5</td>\n",
        "      <td>I usually give them a call before I stop by to...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "      <td>0x89c6c63c8cd87141:0x54d0d283872eecbb</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -132,10 +147,10 @@
        "1  1.176097e+20  Jonathan McCarthy  1476276291163       5   \n",
        "2  1.105632e+20          Rocky Kev  1338826945578       5   \n",
        "\n",
-       "                                                text   \n",
-       "0  Joe is quite unique of his line of work, he as...  \\\n",
-       "1  For such a small place their impact on my life...   \n",
-       "2  I usually give them a call before I stop by to...   \n",
+       "                                                text  pics  resp   \n",
+       "0  Joe is quite unique of his line of work, he as...  None  None  \\\n",
+       "1  For such a small place their impact on my life...  None  None   \n",
+       "2  I usually give them a call before I stop by to...  None  None   \n",
        "\n",
        "                                 gmap_id  \n",
        "0  0x89c6c63c8cd87141:0x54d0d283872eecbb  \n",
@@ -143,7 +158,7 @@
        "2  0x89c6c63c8cd87141:0x54d0d283872eecbb  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +179,7 @@
        "(2400000, 8)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -185,17 +200,19 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 2400000 entries, 0 to 149999\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column            Dtype  \n",
-      "---  ------            -----  \n",
-      " 0   user_id           float64\n",
-      " 1   name              object \n",
-      " 2   rating            int64  \n",
-      " 3   text              object \n",
-      " 4   gmap_id           object \n",
-      " 5   time_normalizado  object \n",
-      "dtypes: float64(1), int64(1), object(4)\n",
-      "memory usage: 128.2+ MB\n"
+      "Data columns (total 8 columns):\n",
+      " #   Column   Dtype  \n",
+      "---  ------   -----  \n",
+      " 0   user_id  float64\n",
+      " 1   name     object \n",
+      " 2   time     int64  \n",
+      " 3   rating   int64  \n",
+      " 4   text     object \n",
+      " 5   pics     object \n",
+      " 6   resp     object \n",
+      " 7   gmap_id  object \n",
+      "dtypes: float64(1), int64(2), object(5)\n",
+      "memory usage: 164.8+ MB\n"
      ]
     }
    ],
@@ -206,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,17 +246,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Eliminamos time y verificamos la creacion de la nueva columna\n",
-    "df_pennsylvania=df_pennsylvania.drop(['time',],axis=1)"
+    "# Filtrado de columnas\n",
+    "df_pennsylvania = df_pennsylvania[['user_id','name','time_normalizado','rating','text','gmap_id']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user_id             float64\n",
+       "name                 object\n",
+       "time_normalizado     object\n",
+       "rating                int64\n",
+       "text                 object\n",
+       "gmap_id              object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verificamos el tipo de dato en las columnas \n",
+    "df_pennsylvania.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pennsylvania['user_id'] = df_pennsylvania['user_id'].astype(object)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -265,50 +318,50 @@
        "      <th></th>\n",
        "      <th>user_id</th>\n",
        "      <th>name</th>\n",
+       "      <th>time_normalizado</th>\n",
        "      <th>rating</th>\n",
        "      <th>text</th>\n",
        "      <th>gmap_id</th>\n",
-       "      <th>time_normalizado</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.049447e+20</td>\n",
+       "      <td>104944742559079759872.0</td>\n",
        "      <td>Jaron Whitfield</td>\n",
+       "      <td>04/02/18 08:09:22</td>\n",
        "      <td>5</td>\n",
        "      <td>Joe is quite unique of his line of work, he as...</td>\n",
        "      <td>0x89c6c63c8cd87141:0x54d0d283872eecbb</td>\n",
-       "      <td>04/02/18 08:09:22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.176097e+20</td>\n",
+       "      <td>117609702832980328448.0</td>\n",
        "      <td>Jonathan McCarthy</td>\n",
+       "      <td>12/10/16 12:44:51</td>\n",
        "      <td>5</td>\n",
        "      <td>For such a small place their impact on my life...</td>\n",
        "      <td>0x89c6c63c8cd87141:0x54d0d283872eecbb</td>\n",
-       "      <td>12/10/16 12:44:51</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        user_id               name  rating   \n",
-       "0  1.049447e+20    Jaron Whitfield       5  \\\n",
-       "1  1.176097e+20  Jonathan McCarthy       5   \n",
+       "                   user_id               name   time_normalizado  rating   \n",
+       "0  104944742559079759872.0    Jaron Whitfield  04/02/18 08:09:22       5  \\\n",
+       "1  117609702832980328448.0  Jonathan McCarthy  12/10/16 12:44:51       5   \n",
        "\n",
        "                                                text   \n",
        "0  Joe is quite unique of his line of work, he as...  \\\n",
        "1  For such a small place their impact on my life...   \n",
        "\n",
-       "                                 gmap_id   time_normalizado  \n",
-       "0  0x89c6c63c8cd87141:0x54d0d283872eecbb  04/02/18 08:09:22  \n",
-       "1  0x89c6c63c8cd87141:0x54d0d283872eecbb  12/10/16 12:44:51  "
+       "                                 gmap_id  \n",
+       "0  0x89c6c63c8cd87141:0x54d0d283872eecbb  \n",
+       "1  0x89c6c63c8cd87141:0x54d0d283872eecbb  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -328,14 +381,14 @@
       "text/plain": [
        "user_id                   0\n",
        "name                      0\n",
+       "time_normalizado          0\n",
        "rating                    0\n",
        "text                1041386\n",
        "gmap_id                   0\n",
-       "time_normalizado          0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +409,7 @@
        "33568"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +445,7 @@
        "(1328047, 6)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +457,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cantidad de datos segun el año \n",
+    "#conteo_por_año = df_pennsylvania['año'].value_counts().sort_index()\n",
+    "#print(conteo_por_año)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
