agregue metadata en origen

--- a/Sprint 2 Ingenieria de Datos/ETL_google/ETL_Florida.ipynb
+++ b/Sprint 2 Ingenieria de Datos/ETL_google/ETL_Florida.ipynb
@@ -8,26 +8,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## importamos galerias "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# importamos librerias\n",
     "import os\n",
     "import pandas as pd"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
